<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/profil"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="28dp"
        android:background="@drawable/profil"
        android:contentDescription="@string/content_desc_profile_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/pencarian"
        android:layout_width="366dp"
        android:layout_height="49dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/hint_find_your_class_note_schedule_contact_etc"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:textAlignment="center"
        android:background="@drawable/pencarian"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/search"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/search"
        android:contentDescription="@string/content_desc_search_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="@+id/pencarian"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/backround_m"
        android:layout_width="419dp"
        android:layout_height="524dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/backround_menu"
        android:contentDescription="@string/content_desc_backgorud_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pencarian" />

    <ImageView
        android:id="@+id/menu_1"
        android:layout_width="374dp"
        android:layout_height="375dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/menu_1"
        android:contentDescription="@string/content_desc_menu_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backround_m"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/bg_button"
        android:layout_width="416dp"
        android:layout_height="87dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_button"
        android:contentDescription="@string/content_desc_bg_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/icon_calender"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/icon_calender"
        android:contentDescription="@string/content_desc_icon_1"
        app:layout_constraintEnd_toStartOf="@+id/icon_reminder"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/menu_1"
        app:layout_constraintTop_toTopOf="@+id/menu_1"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/icon_reminder"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/icon_reminder"
        android:contentDescription="@string/content_desc_icon_2"
        app:layout_constraintEnd_toStartOf="@+id/icon_note"
        app:layout_constraintTop_toTopOf="@+id/menu_1"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/icon_note"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/icon_note"
        android:contentDescription="@string/content_desc_icon_3"
        app:layout_constraintEnd_toEndOf="@+id/menu_1"
        app:layout_constraintTop_toTopOf="@+id/menu_1"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/icon_class"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/buku"
        android:contentDescription="@string/content_desc_icon_4"
        app:layout_constraintBottom_toBottomOf="@+id/menu_1"
        app:layout_constraintEnd_toStartOf="@+id/icon_meet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/menu_1" />

    <ImageButton
        android:id="@+id/icon_meet"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/icon_meet"
        android:contentDescription="@string/content_desc_icon_5"
        app:layout_constraintBottom_toBottomOf="@+id/menu_1"
        app:layout_constraintEnd_toStartOf="@+id/icon_contac" />

    <ImageButton
        android:id="@+id/icon_contac"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/icon_contact"
        android:contentDescription="@string/content_desc_icon_6"
        app:layout_constraintBottom_toBottomOf="@+id/menu_1"
        app:layout_constraintEnd_toEndOf="@+id/menu_1" />

    <ImageButton
        android:id="@+id/note_1"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/note_1"
        android:contentDescription="@string/content_desc_icon_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/reminder_1"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/reminder_1"
        android:contentDescription="@string/content_Desc_icon_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bg_button" />

    <TextView
        android:id="@+id/adolfo"
        android:layout_width="165dp"
        android:layout_height="54dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="top"
        android:text="@string/adolfo"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/pencarian"
        app:layout_constraintEnd_toStartOf="@+id/profil"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/febaruari_2"
        android:layout_width="192dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:gravity="top"
        android:text="@string/febaruari_2"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adolfo" />

    <TextView
        android:id="@+id/task_schedu"
        android:layout_width="76dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal|top"
        android:text="@string/task_schedu"
        android:textColor="#95A5B7"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/icon_class"
        app:layout_constraintEnd_toEndOf="@+id/menu_1"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="@+id/menu_1"
        app:layout_constraintTop_toBottomOf="@+id/icon_calender"
        app:layout_constraintVertical_bias="0.468" />

    <TextView
        android:id="@+id/task_remind"
        android:layout_width="81dp"
        android:layout_height="37dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="28dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal|top"
        android:text="@string/task_remind"
        android:textColor="#95A5B7"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/icon_meet"
        app:layout_constraintEnd_toStartOf="@+id/note"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toEndOf="@+id/task_schedu"
        app:layout_constraintTop_toBottomOf="@+id/icon_reminder"
        app:layout_constraintVertical_bias="0.478" />

    <TextView
        android:id="@+id/note"
        android:layout_width="76dp"
        android:layout_height="23dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal|top"
        android:text="@string/note"
        android:textColor="#95A5B7"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/icon_contac"
        app:layout_constraintEnd_toEndOf="@+id/menu_1"
        app:layout_constraintTop_toBottomOf="@+id/icon_note" />

    <TextView
        android:id="@+id/kelas"
        android:layout_width="73dp"
        android:layout_height="23dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal|top"
        android:text="@string/kelas"
        android:textColor="#95A5B7"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/menu_1"
        app:layout_constraintEnd_toStartOf="@+id/meeting_roo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/menu_1"
        app:layout_constraintTop_toBottomOf="@+id/icon_class"
        app:layout_constraintVertical_bias="0.403" />

    <TextView
        android:id="@+id/meeting_roo"
        android:layout_width="76dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal|top"
        android:text="@string/meeting_roo"
        android:textColor="#95A5B7"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/menu_1"
        app:layout_constraintEnd_toStartOf="@+id/contact"
        app:layout_constraintTop_toBottomOf="@+id/icon_meet"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="76dp"
        android:layout_height="21dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal|top"
        android:text="@string/contact"
        android:textColor="#95A5B7"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/menu_1"
        app:layout_constraintEnd_toEndOf="@+id/menu_1"
        app:layout_constraintTop_toBottomOf="@+id/icon_contac"
        app:layout_constraintVertical_bias="0.423" />

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="36dp"
        android:background="@drawable/add_button"
        android:contentDescription="@string/content_Desc_add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>